force-app/main/default/objects/Timecard__c/Timecard__c.object-meta.xml
<CustomObject>
    <label>Timecard</label>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Timecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>