force-app/main/default/objects/Timecard__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>Assignment__c</referenceTo>
    <relationshipLabel>Timecards</relationshipLabel>
    <relationshipName>Timecards</relationshipName>
    <type>Lookup</type>
</CustomField>