force-app/main/default/objects/Timecard__c/fields/Images_JSON__c.field-meta.xml
<CustomField>
    <fullName>Images_JSON__c</fullName>
    <label>Images JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>