force-app/main/default/objects/Timecard__c/fields/Total_Billiable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Billiable_Amount__c</fullName>
    <formula>( Monday_Hours__c + Tuesday_Hours__c + Wednesday_Hours__c +  Thursday_Hours__c + Friday_Hours__c +  Saturday_Hours__c + Sunday_Hours__c ) *  Assignment__r.Resource_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billiable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>