force-app/main/default/objects/Timecard__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sickleave</fullName>
            </value>
            <value>
                <fullName>Sickleave without Document</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Unpaid Leave</fullName>
            </value>
            <value>
                <fullName>Client Project</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Maternity Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>