force-app/main/default/objects/Timecard__c/validationRules/Closed_TIme_for_Entry.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_TIme_for_Entry</fullName>
    <active>true</active>
    <errorConditionFormula>Assignment__r.Closed_for_Time_Entry__c</errorConditionFormula>
    <errorDisplayField>Assignment__c</errorDisplayField>
    <errorMessage>Closed for Time Entry</errorMessage>
</ValidationRule>