force-app/main/default/objects/Timecard__c/listViews/Educations.listView-meta.xml
<ListView>
    <fullName>Educations</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Education</value>
    </filters>
    <label>Educations</label>
</ListView>