force-app/main/default/objects/Timecard__c/listViews/Maternity_Leaves.listView-meta.xml
<ListView>
    <fullName>Maternity_Leaves</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Maternity Leave</value>
    </filters>
    <label>Maternity Leaves</label>
</ListView>