force-app/main/default/objects/Timecard__c/listViews/My_Timecards.listView-meta.xml
<ListView>
    <fullName>My_Timecards</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Project__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Timecards</label>
</ListView>