force-app/main/default/objects/Timecard__c/listViews/Sickleaves_Without_Document.listView-meta.xml
<ListView>
    <fullName>Sickleaves_Without_Document</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Sickleave without Document</value>
    </filters>
    <label>Sickleaves Without Document</label>
</ListView>