force-app/main/default/objects/Timecard__c/listViews/Timecards_per_Month.listView-meta.xml
<ListView>
    <fullName>Timecards_per_Month</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>5/1/2025</value>
    </filters>
    <label>Timecards per Month</label>
</ListView>