force-app/main/default/objects/Timecard__c/listViews/Unpaid_Leaves.listView-meta.xml
<ListView>
    <fullName>Unpaid_Leaves</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Unpaid Leave</value>
    </filters>
    <label>Unpaid Leaves</label>
</ListView>