force-app/main/default/objects/Timecard__c/listViews/Vacations.listView-meta.xml
<ListView>
    <fullName>Vacations</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Vacation</value>
    </filters>
    <label>Vacations</label>
</ListView>