force-app/main/default/objects/Timecard__c/listViews/Waiting_For_Approval.listView-meta.xml
<ListView>
    <fullName>Waiting_For_Approval</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Total_Billiable_Amount__c</columns>
    <columns>Project__c</columns>
    <columns>Assignment__c</columns>
    <columns>Milestone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Sickleave,Sickleave without Document,Vacation,Unpaid Leave,Education,Maternity Leave</value>
    </filters>
    <label>Waiting For Approval</label>
</ListView>